trying to fix my component being covered by the other component

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   background-color: rgb(228, 222, 222);
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .App-logo {
